# fastapi-template

./: .dockerignore  .env.sample  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  prod.docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  linting.yml  main.yml  pull_request.yml
app/: __init__.py  __main__.py  main.py  run.py  settings.py
app/dependencies/: __init__.py  logging.py
app/middleware/: logging.py
prisma/: schema.prisma
